<resources>
    <string name="app_name">ShipWizard_v1.1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">mdAA8KSCq2H4MHUZIQ2hRYLhrLlqAHrtpYeyGjss</string>
    <string name="parse_client_id">smForgFKQ0G7pOjKKXaUPH76vgLrLswzVrl0yvr6</string>
    <string name="facebook_app_id">481944341987135</string>


    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="log_in_facebook">Log in with Facebook account </string>
    <string name="log_in_google">Log in with Google+ account </string>
    <string name="forget_pass">Forget your password?</string>
    <string name="reset_email">Recovery Email</string>
    <string name="send_email">Send reset password request</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="log_out">Log out of Anywall</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">Enter a username</string>
    <string name="error_blank_password">Enter a password</string>
    <string name="error_mismatched_passwords">Enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="title_activity_forget_password">Forget_password</string>
    <string name="title_activity_new_transaction_activity">NewTransaction_activity</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_new_trans__option">NewTrans_Option</string>

    <!-- Strings related to transaction -->
    <string name="post_transaction">Post a Transaction</string>
    <string name="view_transaction">View Transactions</string>
    <string name="ship_transaction">View Transactions</string>
    <string name="order_transaction">View Transactions</string>
    <string name="title_activity_post__transaction">Post a Transaction</string>
    <string name="current_place">Where are you living now?</string>
    <string name="current_place_info">You are living at</string>
    <string name="order_place">Where do you want to order your items?</string>
    <string name="order_place_info">You want to order item(s) at/in</string>
    <string name="order_time">When do you want to get your items?</string>
    <string name="order_time_info">You want to get your item at</string>
    <string name="order_item">What items do you want to order?</string>
    <string name="order_item_info">You want to order</string>
    <string name="order_price">How much do you want to pay for your items?</string>
    <string name="order_price_info">The amount you want to pay for your item</string>
    <string name="post_successful">Your order message has been successfully posted on the DashBoard</string>

    <string name="ship_current_place">Where do you buy your items?</string>
    <string name="ship_current_place_info">You buy your item(s) at/in</string>
    <string name="ship_destination">Where do you want to ship your items to?</string>
    <string name="ship_destination_info">You want to ship your item(s) to</string>
    <string name="ship_items">What do you want to ship?</string>
    <string name="ship_items_info">You want to ship</string>
    <string name="ship_price">How much do you expect for your item(s)?</string>
    <string name="ship_price_info">The amount you expect for your item(s)</string>
    <string name="ship_time">When will you ship your items?</string>
    <string name="ship_time_info">You will ship your item(s) at</string>
    <string name="test_text">This text is for test purpose</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer_test">Navigation_drawer_test</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_drawer_test">Drawer_test</string>

    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>

    <string-array name="currency">
        <item>VND</item>
        <item>WON</item>
        <item>USD</item>
        <item>AUD</item>
        <item>EURO</item>
        <item>YEN</item>
    </string-array>

    <!-- Toolbar titles -->
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Other Activity</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="ads_mess"> ADS MANAGER </string>
    <string name="divide_search"> ADS SEARCH </string>
    <string name="divide_setting"> APPS SETTING </string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>
    <string name="title_activity_view__transaction">Home</string>
    <string name="title_activity_slidemenu__about">About</string>
    <string name="title_activity_slidemenu__setting">Setting</string>
    <string name="title_activity_slidemenu__feedback">Feedback</string>
    <string name="title_activity_slidemenu_search_result">Search Results</string>
    <string name="title_activity_ads_view">Ads_view</string>
    <string name="title_activity_public__ads_view">Public_Ads_view</string>
    <string name="title_activity_send__message">Send_Message</string>

    <!-- Strings for chat -->
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

</resources>
