<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="#0000ec">
d
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="8-15 character title"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_place" />

        <EditText
            android:id="@+id/etCurrent_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_place"/>

        <EditText
            android:id="@+id/etOrder_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_item"/>

        <EditText
            android:id="@+id/etOrder_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_price"/>

        <EditText
            android:id="@+id/etOrder_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:singleLine="false"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/bUpload_Image"
            android:src="@drawable/ic_photo_camera_white_24dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="#7e7e7e"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="0.81">

            <Button
                android:id="@+id/bPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preview" />

            <Button
                android:id="@+id/bPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>